<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/input_group"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/signup_image_upload"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:elevation="10dp"
            android:padding="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/user"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:strokeColor="@color/white_shadow"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/image_error_text"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_image_upload"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/select_your_photo"
            android:textColor="@color/white_shadow"
            android:textStyle="bold"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signup_name"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_top"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/purple_light"
            android:textColorHint="@color/edit_text_color" />

        <EditText
            android:id="@+id/signup_dob"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_middle"
            android:hint="@string/dob"
            android:inputType="date"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/purple_light"
            android:textColorHint="@color/edit_text_color" />

        <EditText
            android:id="@+id/signup_email"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_middle"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/purple_light"
            android:textColorHint="@color/edit_text_color" />

        <EditText
            android:id="@+id/signup_password"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_middle"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/purple_light"
            android:textColorHint="@color/edit_text_color" />

        <EditText
            android:id="@+id/signup_password_confirm"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_bottom"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/purple_light"
            android:textColorHint="@color/edit_text_color" />

        <Button
            android:id="@+id/signup_btn"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@color/purple_700" />

        <TextView
            android:id="@+id/signin_text"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/signinNow"
            android:textAllCaps="true"
            android:textColor="@color/white_shadow"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>